# yanaengine

./: .clang-tidy  .gitignore  CMakeLists.txt  CMakePresets.json  README.md
.github/workflows/: build.yml
cmake/: CCache.cmake  CompilerWarnings.cmake  ProjectOptions.cmake  Sanitizers.cmake  StaticAnalyzers.cmake  clang-toolchain.cmake  gcc-toolchain.cmake
docs/: Architecture.md  CodingStyle.md  Roadmap.md  VCS-Workflow.md
docs/adr/: ADR-0001-Repository-Layout.md  ADR-0002-Build-System.md  ArchitectureDecisionRecords.md
docs/guides/: DevelopmentEnvironment.md
sandbox/: CMakeLists.txt  main.cpp
